fix: phone sizing issue on ios

--- a/src/components/UI/AboutSection.module.scss
+++ b/src/components/UI/AboutSection.module.scss
@@ -61,8 +61,7 @@
         &:nth-child(4) {
             bottom: 0%;
             left: 30%;
-            width: 100%;
-            // height: fit-content;
+            width: 4rem;
             z-index: 5;
             @include responsiveMin1800 {
                 width: 6rem;
@@ -89,7 +88,6 @@
             bottom: 0%;
             left: 40%;
             width: 5rem;
-            // height: -content;
             z-index: 4;
 
             @include responsiveMin1800 {
